# cherno_OpenGl

./: CMakeLists.txt  README.md
include/: debugger.hpp  indexBuffer.hpp  renderer.hpp  shader.hpp  texture.hpp  vertexArray.hpp  vertexBuffer.hpp  vertexBufferLayout.hpp
res/shaders/: basic.shader  basic_texture.shader
src/: debugger.cpp  indexBuffer.cpp  objectRender.cpp  objectRender_noClasses.cpp  renderer.cpp  shader.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp
src/APPS/: renderObject_texture.cpp
